# osm_roads

./: README.md  README.rst  requirements.txt  setup.cfg  setup.cfg.bak
examples/: osm_roads_demo.ipynb
src/osm_roads/: osm_roads.py  osm_roads.py.bak
