[metadata]
name = osm_roads
version = 0.1
author = Gireesan Namboothiri
author_email = sahyagiri@gmail.com
description = The package takes an openstreetmap pbf file and converts it to a Trie with all the road network information
It provides an api to then do a fast map matching for any latitude, longitude that comes under the bounding box of the pbf file. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sahyagiri/osm_roads
project_urls =
    Bug Tracker = https://github.com/sahyagiri/osm_roads/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords='openstreetmap','map matching', 'pbf', 'trie', 'geohash'

install_requires=[
'datrie==0.8.2',
'geojson==2.5.0',
'osmium>=3.2.0',
'python_geohash>=0.8.5',
'turfpy>=0.0.7'
]

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
